[package]
edition = "2021"
name = "symboltable"
version = "0.1.0"
description = "Contains a symbol table"
license = "All Rights Reserved"
repository = "https://github.com/RobbieMcKinstry/symboltable"
readme = "README.md"
keywords = ["compilers"]
categories = ["compiles"]

[lib]
name = "symboltable"

[dependencies]
typed_ids = "0.2.0"
im = "15.1"
thiserror = "1.0"
miette = "5.1"
colored = "2.0.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
static_assertions = "1.1.0"
